[web-animations] ::placeholder should not be a valid pseudo-element for a KeyframeEffect target https://bugs.webkit.org/show_bug.cgi?id=237334

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

* web-platform-tests/web-animations/interfaces/Animatable/animate-expected.txt:
* web-platform-tests/web-animations/interfaces/KeyframeEffect/target-expected.txt:

Source/WebCore:

* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::setPseudoElement):


Canonical link: https://commits.webkit.org/247934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290662 268f45cc-cd09-0410-ab3c-d52691b4dbfc